--- a/src/main/doc/simplelogging.texi
+++ b/src/main/doc/simplelogging.texi
@@ -50,9 +50,10 @@ and then backend to a number of other logging libraries or you can easily implem
 appropriately and supports up to 4 arguments before forcing the caller to pass in an object array or calling a different
 @code{logArgs(...)} method for variable arguments.
 
-I understand that this is the goal of other logging APIs as well but I don't like the requirement on classpath order to
-satisfy the logging connection.  SimpleLogging includes calls directly to specific backends which can be chosen through
-code or configuration.  
+I understand that this facade seems similar to other logging systems which separate their API from the implementation.
+What I don't like the requirement on classpath order to satisfy the connection between the API and the backend.
+SimpleLogging includes calls directly to specific backend APIs which can be chosen through code or configuration.
+This direct calling allows for more control over the backend selection and possibly fewer dependencies.
 
 To get started quickly using SimpleLogging, @pxref{Quick Start}.
 @ifhtml
