--- a/src/main/doc/simplelogging.texi
+++ b/src/main/doc/simplelogging.texi
@@ -43,12 +43,14 @@ Version @value{simplelogging_version} -- @value{simplelogging_date}
 @cindex introduction
 @cindex author
 @cindex simple logging
-The goal is a small-ish library that backends to a number of standard logging packages.  This allows you to write your
-code and include log messages without having a fixed dependency on any one logging package.  I include this code into my
-libraries and so they can stay agnostic.  This logging code allows you to write messages with the @code{@{@}} support
-and then backend to a number of other logging libraries or you can easily implement your own.  It also handles arrays
-appropriately and supports up to 4 arguments before forcing the caller to pass in an object array or calling a different
-@code{logArgs(...)} method for variable arguments.
+@cindex logging facade
+The goal of this library is to be a small logging facade that backends to a number of standard logging packages and that
+can be copied into another project.  This allows you to write your code and include log messages without having a fixed
+dependency on any one logging package.  I include this code into my libraries and so they can stay agnostic.  This
+ogging code allows you to write messages with the slf4j-style @code{@{@}} argument support and then backend to a number
+of other logging libraries or you can easily implement your own.  It also handles arrays appropriately and supports up
+to 4 arguments before forcing the caller to pass in an object array or calling a different @code{logArgs(...)} method
+for variable arguments.
 
 I understand that this facade seems similar to other logging systems which separate their API from the implementation.
 What I don't like the requirement on classpath order to satisfy the connection between the API and the backend.
@@ -139,9 +141,9 @@ The code works with Java 6 or later.
 @cindex log type of backends
 @cindex copying code
 
-To use the SimpleLogging code in your library, just copy the classes into a logging package in your code and rename the
-package as necessary.  You may want to tune the order of discovery in the @code{LogBackendType} enumerated class or
-remove support for certain loggers that your library doesn't need support for.
+To use the SimpleLogging code in your library, you can either depend on the jar or just copy the classes into a logging
+package in your code and rename the package as necessary.  You may want to tune the order of discovery in the
+@code{LogBackendType} enumerated class or remove support for certain loggers that your library doesn't need to support.
 
 @c ----------------------------------------------------------------
 @node Logging Arguments, Backend Discovery, Using in Your Library, Using
