--- a/src/main/doc/simplelogging.texi
+++ b/src/main/doc/simplelogging.texi
@@ -6,9 +6,9 @@
 @c %**end of header
 
 @c ----------------------------------------------------------------
-@set simplelogging_version 1.10
-@set simplelogging_year 2022
-@set simplelogging_date November @value{simplelogging_year}
+@set simplelogging_version 1.11
+@set simplelogging_year 2023
+@set simplelogging_date February @value{simplelogging_year}
 @set package SimpleLogging
 @c ----------------------------------------------------------------
 
@@ -152,7 +152,8 @@ package in your code and rename the package as necessary.  You may want to tune 
 
 SimpleLogging is designed to be copied into your open source project so you don't have to add a dependency.  Just copy
 the java files from @code{src/main/java} into your source tree and rename the packages as necessary.  Please also copy
-the @code{SIMPLELOGGING_LICENSE.txt} file which is the very permissive ISC license.
+the @code{SIMPLELOGGING_LICENSE.txt} file which is the very permissive ISC license.  You may want to change the
+constants in @code{LoggerConstants.java}.
 
 @c ----------------------------------------------------------------
 @node Logging Arguments, Setting Log Level, Depending on SimpleLogging, Using
@@ -324,11 +325,30 @@ fluentLogger.atLevel(Level.TRACE)
     .log();
 @end example
 
+Logging of arrays in fluent logging can be done one of two ways.  You can use the @code{flientLogger.args(...)}
+method to add an array of object arguments to the log message, each element of which will match a @{@} from the
+message. If you want an array to be associated with a single @{@} and displayed as @code{[arg1, arg2, ...]}
+then you need to use the method @code{fluentLogger.arg(Object)} which will interpret the array as an object.
+
+For example, the following code which calls this @code{args(...)} method will output: "1 + 2 = 3"
+
+@example
+fluentLogger.msg("@{@} + @{@} = @{@}").args(new Object[] @{ 1, 2, 3 @}).log();
+@end example
+
+While the following code which calls @code{arg(...)} will output: "port numbers: [1, 2, 3]" which interprets the
+array as an @code{Object} and will match a single @{@} from the message.
+
+@example
+fluentLogger.msg("port numbers: @{@}").arg(new Object[] @{ 1, 2, 3 @}).log();
+@end example
+
 @c ----------------------------------------------------------------
 @node Backend Discovery, More Usage Examples, Setting Log Level, Using
 @section How SimpleLogging Discovers the Logging Backend
 
 @cindex discovering backend
+@cindex backend, discovering
 @cindex log backend discovery
 Built into the @code{LoggerFactory} class is a @code{LogBackendType} enumerated type which SimpleLogging uses to try to
 locate what logging packages are on the classpath and therefore should be used.
@@ -375,8 +395,23 @@ Or to specify a specifically factory class including custom ones:
 LoggerFactory.setLogBackendFactory(new LogbackLogBackendFactory());
 @end example
 
-You can also set the @code{com.j256.simplelogger.backend} Java property to one of the @code{LogBackendType}
-values in the above list.  For example: @code{java -Dcom.j256.simplelogger.backend=LOGBACK}
+@cindex system property
+@cindex java property
+@cindex property, system
+@cindex com.j256.simplelogger.backend property
+
+You can also set the @code{com.j256.simplelogger.backend} Java system property to one of the @code{LogBackendType}
+values in the above list.
+
+@example
+java -Dcom.j256.simplelogger.backend=LOGBACK ...
+@end example
+
+You can also set the property to be a class name that implements @code{LogBackendFactory}.
+
+@example
+java -Dcom.j256.simplelogger.backend=com.j256.simplelogging.backend.LogbackLogBackend$LogbackLogBackendFactory ...
+@end example
 
 @c ----------------------------------------------------------------
 @node More Usage Examples, Maven, Setting Log Level, Using
