--- a/src/main/doc/simplelogging.texi
+++ b/src/main/doc/simplelogging.texi
@@ -345,17 +345,17 @@ array as an @code{Object} and will match a single @{@} from the message.
 fluentLogger.msg("port numbers: @{@}").arg(new Object[] @{ 1, 2, 3 @}).log();
 @end example
 
-You can also append to the previous message in case you want to do something like the following logic:
+You can also append to a previous log message set with @code{msg(String)} in case you want to do something like
+the following logic:
 
 @example
 FluentContext context = fluentLogger.atTrace().msg("connection parameters: ");
-if (host != null) {
-    fluentLogger.appendMsg("host {}, ").arg(host);
-}
-fluentLogger.appendMsg("port {}").arg(port);
-fluentLogger.log();
+if (host != null) @{
+    context.appendMsg("host @{@}, ").arg(host);
+@}
+context.appendMsg("port @{@}").arg(port);
+context.log();
 @end example
-
 
 @c ----------------------------------------------------------------
 @node Backend Discovery, More Usage Examples, Setting Log Level, Using
